Android option is in-place and working propertly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,11 +11,11 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 if(WIN32)
-    set(CMAKE_C_FLAGS_RELEASE "/O2 /TC")
-    set(CMAKE_C_FLAGS_DEBUG "/Zi /TC")
-elseif(UNIX)
-    set(CMAKE_C_FLAGS_RELEASE "-O3 -fPIC")
-    set(CMAKE_C_FLAGS_DEBUG "-Og -fPIC")
+    set(CMAKE_C_FLAGS_RELEASE "/O2 /TC /w")
+    set(CMAKE_C_FLAGS_DEBUG "/Zi /TC /w")
+elseif(UNIX OR ANDROID)
+    set(CMAKE_C_FLAGS_RELEASE "-O3 -fPIC -w")
+    set(CMAKE_C_FLAGS_DEBUG "-Og -fPIC -w")
 endif()
 
 if(CMAKE_BUILD_TYPE STREQUAL "Release")
@@ -29,6 +29,7 @@ message(STATUS "CMAKE_C_FLAGS_RELEASE:= ${CMAKE_C_FLAGS_RELEASE}")
 message(STATUS "CMAKE_C_FLAGS_DEBUG:= ${CMAKE_C_FLAGS_DEBUG}")
 message(STATUS "CMAKE_C_FLAGS:= ${CMAKE_C_FLAGS}")
 message(STATUS "CMAKE_BUILD_TYPE:= ${CMAKE_BUILD_TYPE}")
+message(STATUS "CMAKE_INSTALL_PREFIX:= ${CMAKE_INSTALL_PREFIX}")
 
 include_directories("${PROJECT_SOURCE_DIR}/include")
 include_directories("${PROJECT_SOURCE_DIR}/zbar/decoder")
@@ -42,9 +43,9 @@ set(LDECODER    "ldecoder")
 set(LQRCODE     "lqrcode")
 set(LZBAR       "libzbar")
 
-if(WIN32)
+if(WIN32 OR ANDROID)
     include_directories("${PROJECT_SOURCE_DIR}/zbar/libiconv-win/include")
-endif(WIN32)
+endif(WIN32 OR ANDROID)
 
 add_subdirectory("zbar")
 set(PUBLIC_HEADERS
