--- a/zbar/qrcode/CMakeLists.txt
+++ b/zbar/qrcode/CMakeLists.txt
@@ -22,8 +22,16 @@ set(HEADERS
 add_library(${LQRCODE} STATIC ${SOURCES} ${HEADERS})
 
 if(UNIX)
-    target_link_libraries(${LQRCODE} ${LCONFIG})
+    if(ANDROID)
+        target_link_libraries(${LQRCODE} ${LCONFIG} ${LIOCONV})
+    else()
+        target_link_libraries(${LQRCODE} ${LCONFIG})
+    endif(ANDROID)
 elseif(WIN32)
-    target_link_libraries(${LQRCODE} ${LCONFIG} ${LIOCONV})
-    target_compile_definitions(${LQRCODE} PUBLIC LIB_ZBAR_BUILD)
+    if(ANDROID)
+        target_link_libraries(${LQRCODE} ${LCONFIG} ${LIOCONV})
+    else()
+        target_link_libraries(${LQRCODE} ${LCONFIG} ${LIOCONV})
+        target_compile_definitions(${LQRCODE} PUBLIC LIB_ZBAR_BUILD)
+    endif(ANDROID)
 endif()
