--- a/zbar/qrcode/CMakeLists.txt
+++ b/zbar/qrcode/CMakeLists.txt
@@ -34,4 +34,6 @@ elseif(WIN32)
         target_link_libraries(${LQRCODE} ${LCONFIG} ${LIOCONV})
         target_compile_definitions(${LQRCODE} PUBLIC LIB_ZBAR_BUILD)
     endif(ANDROID)
+elseif(APPLE)
+    target_link_libraries(${LQRCODE} ${LCONFIG} ${LIOCONV})
 endif()
