--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,20 @@ if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
 endif()
 
+if(APPLE)
+    set(WIN32   False)
+    set(UNIX    False)
+endif(APPLE)
+
 if(WIN32)
     set(CMAKE_C_FLAGS_RELEASE "/O2 /TC /w")
     set(CMAKE_C_FLAGS_DEBUG "/Zi /TC /w")
 elseif(UNIX OR ANDROID)
+    set(CMAKE_C_FLAGS_RELEASE "-O3 -fPIC -w")
+    set(CMAKE_C_FLAGS_DEBUG "-Og -fPIC -w")
+elseif(APPLE)
+    set(CMAKE_C_COMPILER gcc)
+    set(CMAKE_CXX_COMPILER g++)
     set(CMAKE_C_FLAGS_RELEASE "-O3 -fPIC -w")
     set(CMAKE_C_FLAGS_DEBUG "-Og -fPIC -w")
 endif()
@@ -43,9 +53,9 @@ set(LDECODER    "ldecoder")
 set(LQRCODE     "lqrcode")
 set(LZBAR       "libzbar")
 
-if(WIN32 OR ANDROID)
+if(WIN32 OR ANDROID OR APPLE)
     include_directories("${PROJECT_SOURCE_DIR}/zbar/libiconv-win/include")
-endif(WIN32 OR ANDROID)
+endif()
 
 add_subdirectory("zbar")
 set(PUBLIC_HEADERS
