Final touchup of cmake files before public release

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,7 +51,13 @@ set(LIOCONV     "lioconv-win")
 set(LCONFIG     "lconfig")
 set(LDECODER    "ldecoder")
 set(LQRCODE     "lqrcode")
-set(LZBAR       "libzbar")
+set(LZBAR       "")
+
+if(WIN32)
+    set(LZBAR       "libzbar")
+else()
+    set(LZBAR       "zbar")
+endif()
 
 if(WIN32 OR ANDROID OR APPLE)
     include_directories("${PROJECT_SOURCE_DIR}/zbar/libiconv-win/include")
