--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,13 @@ set(LZBAR       "")
 
 if(WIN32)
     set(LZBAR       "libzbar")
-else()
+elseif(ANDROID)
+    message(STATUS "ANDROID_ABI = ${ANDROID_ABI}")
+    set(LZBAR       "zbar-${ANDROID_ABI}")
+elseif(IOS)
+    message(STATUS "IOS_ARCH = ${IOS_ARCH}")
+    set(LZBAR       "zbar-${IOS_ARCH}")
+else()    
     set(LZBAR       "zbar")
 endif()
 
