Bug fixes for iOS dylib linking. Will now properly link to app

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.3)
-project("libzbar" VERSION 0.11.0 DESCRIPTION "Complete cross-platform ZBar cmake port")
+project("libzbar" VERSION 0.11.2 DESCRIPTION "Complete cross-platform ZBar cmake port")
 if(NOT CMAKE_INSTALL_PREFIX)
     set(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/bin")
 endif()
 
 set(CMAKE_VERBOSE_MAKEFILE OFF)
+set(BUILD_SHARED_LIBS ON)
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release")
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
@@ -60,9 +61,17 @@ elseif(ANDROID)
     set(LZBAR       "zbar-${ANDROID_ABI}")
 elseif(IOS)
     message(STATUS "IOS_ARCH = ${IOS_ARCH}")
-    set(LZBAR       "zbar-${IOS_ARCH}")
+    set(LZBAR       "zbar")
 else()    
     set(LZBAR       "zbar")
+endif()
+
+if(BUILD_SHARED_LIBS)
+    set(COMPAT_VERSION "-lSystem -compatibility_version ${PROJECT_VERSION} -current_version ${PROJECT_VERSION}")
+    set(CMAKE_MODULE_LINKER_FLAGS "-install_name @executable_path/Frameworks/lib${LZBAR}.dylib ${COMPAT_VERSION}")
+    set(CMAKE_SHARED_LINKER_FLAGS "-install_name @executable_path/Frameworks/lib${LZBAR}.dylib ${COMPAT_VERSION}")
+    set (CMAKE_SHARED_LIBRARY_RUNTIME_C_FLAG 1)
+    set (CMAKE_INSTALL_NAME_DIR "@executable_path")
 endif()
 
 if(WIN32 OR ANDROID OR APPLE OR IOS)
