Fixed windows linking bug.
Fixed windows linking bug, introduced when IOS linking bug was fixed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,12 +66,14 @@ else()
     set(LZBAR       "zbar")
 endif()
 
-if(BUILD_SHARED_LIBS)
-    set(COMPAT_VERSION "-lSystem -compatibility_version ${PROJECT_VERSION} -current_version ${PROJECT_VERSION}")
-    set(CMAKE_MODULE_LINKER_FLAGS "-install_name @executable_path/Frameworks/lib${LZBAR}.dylib ${COMPAT_VERSION}")
-    set(CMAKE_SHARED_LINKER_FLAGS "-install_name @executable_path/Frameworks/lib${LZBAR}.dylib ${COMPAT_VERSION}")
-    set (CMAKE_SHARED_LIBRARY_RUNTIME_C_FLAG 1)
-    set (CMAKE_INSTALL_NAME_DIR "@executable_path")
+if(IOS)
+    if(BUILD_SHARED_LIBS)
+        set(COMPAT_VERSION "-lSystem -compatibility_version ${PROJECT_VERSION} -current_version ${PROJECT_VERSION}")
+        set(CMAKE_MODULE_LINKER_FLAGS "-install_name @executable_path/Frameworks/lib${LZBAR}.dylib ${COMPAT_VERSION}")
+        set(CMAKE_SHARED_LINKER_FLAGS "-install_name @executable_path/Frameworks/lib${LZBAR}.dylib ${COMPAT_VERSION}")
+        set (CMAKE_SHARED_LIBRARY_RUNTIME_C_FLAG 1)
+        set (CMAKE_INSTALL_NAME_DIR "@executable_path")
+    endif()
 endif()
 
 if(WIN32 OR ANDROID OR APPLE OR IOS)
