Added android auto build script to build all arch/ABI versions. Also added qt android pri file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,7 +58,7 @@ if(WIN32)
     set(LZBAR       "libzbar")
 elseif(ANDROID)
     message(STATUS "ANDROID_ABI = ${ANDROID_ABI}")
-    set(LZBAR       "zbar-${ANDROID_ABI}")
+    set(LZBAR       "zbar")
 elseif(IOS)
     message(STATUS "IOS_ARCH = ${IOS_ARCH}")
     set(LZBAR       "zbar")
