--- a/zbar/CMakeLists.txt
+++ b/zbar/CMakeLists.txt
@@ -53,8 +53,8 @@ endif(CMAKE_BUILD_TYPE STREQUAL "Debug")
 
 add_library(${LZBAR} SHARED ${SOURCES} ${HEADERS})
 if(APPLE)
-    set(MACOSX_FRAMEWORK_BUNDLE_VERSION "libzbar")
-    set(MACOSX_FRAMEWORK_SHORT_VERSION_STRING ${VERSION})
+    set(MACOSX_FRAMEWORK_BUNDLE_VERSION ${PROJECT_VERSION})
+    set(MACOSX_FRAMEWORK_SHORT_VERSION_STRING ${PROJECT_VERSION})
     set_target_properties(${LZBAR}
         PROPERTIES FRAMEWORK TRUE
         FRAMEWORK_VERSION A
